--- a/index.html
+++ b/index.html
@@ -2,9 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Darova tvaruna</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-$END$
+    <h1>Венеція</h1>
+    <img class="venecia" src="assets/Rust_5.jpg" height="1080" width="1920"/>
+    <p>місто та муніципалітет в Італії, в регіоні Венето.
+            Адміністративний центр регіону. Розташоване на північному сході країни,
+            на 117 невеликих островах у Венеціанській лагуні Адріатичного моря.
+            Віддалене від Риму на 400 км.
+            Колишня столиця олігархічно-купецької Венеціанської республіки.
+            Один з великих культурних центрів епохи Ренесансу.
+            <b>Венеція</b>Батьківщина Антоніо Вівальді.
+            Великий італійський туристичний центр.
+            Населення — 259 263 особи (2012)
+            </p>
+<!--    <iframe width="560" height="315" src="https://www.youtube.com/embed/zEe_qZRSQTY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+    <table>
+        <tr>
+            <th>user name</th>
+            <th>password</th>
+            <th>email</th>
+            <th>phone number</th>
+        </tr>
+        <tr>
+            <td>Svyatan</td>
+            <td>dadaya32165</td>
+            <td>svyatan@gmail.com</td>
+            <td>8-800-555-3535</td>
+        </tr>
+        <tr>
+            <td>Ivan</td>
+            <td>yayada56123</td>
+            <td>ivan@gmail.com</td>
+            <td>+432584235874237</td>
+        </tr>
+    </table>
+<ul>
+    <li>Вінниця</li>
+    <li>Тернопіль</li>
+    <li>Мухосранск</li>
+</ul>
+
 </body>
 </html>
