--- a/index2.html
+++ b/index2.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-$END$
+<ul>
+    <li>
+        <a href="TravelAgency.html">Svyatoslav Kovalchuk</a>
+    </li>
+</ul>
 </body>
 </html>
